--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,12 @@ dependencies:
   flutter_riverpod: ^1.0.4
   google_fonts: ^3.0.1
   rxdart: ^0.27.4
+  shared_preferences: ^2.0.15
+  like_button: ^2.0.4
+  shimmer: ^2.0.0
+  nested_scroll_controller: ^1.0.0
+  url_launcher: ^6.1.2
+  cached_network_image: ^3.2.1
 
 dev_dependencies:
   flutter_test:
@@ -23,6 +29,13 @@ dev_dependencies:
 
   flutter_lints: ^2.0.0
   mocktail: ^0.3.0
+  flutter_launcher_icons: ^0.9.2
+  http: ^0.13.4
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/icon.png"
 
 flutter:
   uses-material-design: true
