--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   nested_scroll_controller: ^1.0.0
   url_launcher: ^6.1.2
   cached_network_image: ^3.2.1
+  infinite_scroll_pagination: ^3.2.0
 
 dev_dependencies:
   flutter_test:
